--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,9 +16,13 @@
         android:theme="@style/Theme.MobileApp"
         tools:targetApi="31">
         <activity
-            android:name=".NoConnectionActivity"
+            android:name=".OnboardingActivity"
             android:exported="false"
             android:screenOrientation="portrait"/>
+        <activity
+            android:name=".NoConnectionActivity"
+            android:exported="false"
+            android:screenOrientation="portrait" />
         <activity
             android:name=".MainActivity"
             android:exported="true"
