--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,6 +6,7 @@
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
+        android:name=".LanguageApplication"
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
@@ -16,19 +17,19 @@
         android:theme="@style/Theme.MobileApp"
         tools:targetApi="31">
         <activity
+            android:name=".signup.SignupActivity"
+            android:exported="false"
+            android:screenOrientation="portrait" />
+        <activity
             android:name=".login.LoginActivity"
             android:exported="false"
-            android:screenOrientation="portrait"/>
+            android:screenOrientation="portrait" />
         <activity
             android:name=".language_select.LanguageSelectActivity"
             android:exported="false"
             android:screenOrientation="portrait" />
         <activity
             android:name=".onboarding.OnboardingActivity"
-            android:exported="false"
-            android:screenOrientation="portrait" />
-        <activity
-            android:name=".NoConnectionActivity"
             android:exported="false"
             android:screenOrientation="portrait" />
         <activity
