complete multiplayer with computer, do some refactoring

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,31 +5,37 @@
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.CAMERA" />
+
     <uses-feature android:name="android.hardware.camera" />
     <uses-feature android:name="android.hardware.camera.autofocus" />
 
     <application
-        android:requestLegacyExternalStorage="true"
         android:name=".LanguageApplication"
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
+        android:requestLegacyExternalStorage="true"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.MobileApp"
         tools:targetApi="31">
+        <activity
+            android:name=".exercises.multiplayer.MultiplayerActivity"
+            android:exported="false"
+            android:screenOrientation="portrait" />
+
         <provider
-            android:authorities="mobileapp.provider"
             android:name="androidx.core.content.FileProvider"
+            android:authorities="mobileapp.provider"
             android:exported="false"
             android:grantUriPermissions="true">
             <meta-data
                 android:name="android.support.FILE_PROVIDER_PATHS"
-                android:resource="@xml/file_paths"/>
-
+                android:resource="@xml/file_paths" />
         </provider>
+
         <activity
             android:name=".exercises.words.WordExerciseActivity"
             android:exported="false"
@@ -49,7 +55,7 @@
         </service>
 
         <activity
-            android:name=".exercises.animals.AnimalsExerciseActivity"
+            android:name=".exercises.animals.AnimalExerciseActivity"
             android:exported="false"
             android:screenOrientation="portrait" />
         <activity
